--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string name="text_redeem_special_gift">Redeem special gift</string>
     <string name="text_explore_chakra">Explore Chakra</string>
     <string name="cd_icon">icon</string>
+    <string name="text_img_box">img_box</string>
+    <string name="text_your_wishlist_is_empty">Your Wishlist is Empty</string>
+    <string name="text_tap_here">tap heart button to start saving your favorite item</string>
+    <string name="text_find_product">Find Product</string>
 
 </resources>
