Add layout detail history topup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,31 @@
     <string name="_50_000_points">50,000 Points</string>
     <string name="redeem_now">Redeem Now</string>
     <string name="voucher_digital_kalcare_com_50">Voucher Digital Kalcare.com 50...</string>
+    <string name="text_img_cart">text_img_cart</string>
+    <string name="grill_pan_jumbo_new">Grill Pan Jumbo New</string>
+    <string name="move_to_wishlist">Move to Wishlist</string>
+    <string name="handy_steamer">Handy Steamer</string>
+    <string name="_60_000_points">60.000 Points</string>
+    <string name="voucher_digital_kalcare_com_50_000">Voucher Digital Kalcare.com 50.000</string>
+    <string name="total_points">Total points</string>
+    <string name="_160_000">160.000</string>
+    <string name="text_next">Next</string>
+    <string name="detail_top_up">Detail Top Up</string>
+    <string name="topup_date">TopUp Date</string>
+    <string name="ocr_2021300512331">OCR-2021300512331</string>
+    <string name="channel">Channel</string>
+    <string name="text_9_juni_2021_5_08_pm">9 Juni 2021 5:08 pm</string>
+    <string name="_10_000_points">10,000 Points</string>
+    <string name="loyalty">Loyalty</string>
+    <string name="detail_info_struck">Detail Info Struck</string>
+    <string name="outlet_name">Outlet name</string>
+    <string name="tv_indomaret_yos_sudarso_bsd_sm">Indomaret Yos Sudarso BSD, SM</string>
+    <string name="rewards_point">Rewards Point</string>
+    <string name="tv_500_point">500 Point</string>
+    <string name="tv_bonus_point">Bonus Point</string>
+    <string name="tv_receipt_date">Receipt Date</string>
+    <string name="tv_10_juni_2021">10 Juni 2021</string>
+    <string name="tv_status">Status</string>
+    <string name="tv_approved">Approved</string>
+    <string name="btn_need_help">Need Help ?</string>
 </resources>
